# filterfq

./: .gitignore  Makefile  Makefile.am  README.md  autoconf.sh  config.h  config.h.in  configure.ac
include/: command_options.hpp  fastq_filter.hpp  quality_system.hpp  version.hpp
src/: Makefile.am  command_options.cpp  fastq_filter.cpp  fastq_filter.cpp.bak1  filterfq.cpp  main.cpp  main.cpp.bak1  quality_system.cpp
src/.deps/: command_options.Po  fastq_filter.Po  filterfq.Po  main.Po  quality_system.Po
